# lab

./: CMakeLists.txt  README.MD
lab_lin-master/: client.c  erproc.h
src/: erproc.c  server.c
